Remove QMS link on footer

--- a/blog-qms.html
+++ b/blog-qms.html
@@ -191,7 +191,7 @@
                   <a href="https://www.instagram.com/jmalamka/"><i class="biu bi-instagram"></i></a>
                 </div>
                 <p>
-                  As CEO of Nunuget, a top-class software outsourcing company based in Tanzania, I focus on pursuing my passion for digital innovation. Understanding the customer’s pain points to consolidate, manage and harvest with the most satisfactory results is what brings the project to success.
+                  As Founder of Nunuget, a top-class software outsourcing company based in Tanzania, I focus on pursuing my passion for digital innovation. Understanding the customer’s pain points to consolidate, manage and harvest with the most satisfactory results is what brings the project to success.
                 </p>
               </div>
             </div><!-- End post author -->
@@ -342,7 +342,7 @@
           <div class="col-lg-3 col-md-3 footer-links">
             <h4>Our Product</h4>
             <ul>
-              <li><a href="queue management system.html">Queue Management System</a></li>
+              <li><a>Queue Management System</a></li>
               <li><a>Nurse Calling System</a></li>
               <li><a>Propety Management System</a></li>
               <li><a>Inventory Management System</a></li>              
