--- a/blog.html
+++ b/blog.html
@@ -367,7 +367,7 @@
           <div class="col-lg-3 col-md-3 footer-links">
             <h4>Our Product</h4>
             <ul>
-              <li><a href="queue management system.html">Queue Management System</a></li>
+              <li><a>Queue Management System</a></li>
               <li><a>Nurse Calling System</a></li>
               <li><a>Propety Management System</a></li>
               <li><a>Inventory Management System</a></li>
