--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
             <h4>Useful Links</h4>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About us</a></li>
+              <li><a href="about">About us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="projects.html">Projects</a></li>
               <li><a href="blog.html">Blog</a></li>
