--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
    <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="index" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo.jpg" alt="">
         <!-- <h1>UpConstruction<span>.</span></h1>-->
@@ -64,12 +64,12 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="blog.html">Blog</a></li>         
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="index">Home</a></li>
+          <li><a href="about" class="active">About</a></li>
+          <li><a href="services">Services</a></li>
+          <li><a href="projects">Projects</a></li>
+          <li><a href="blog">Blog</a></li>         
+          <li><a href="contact">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -85,7 +85,7 @@
 
         <h2>About - Nunuget Software</h2>
         <ol>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index">Home</a></li>
           <li>About</li>
         </ol>
 
@@ -550,12 +550,12 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About us</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="projects.html">Projects</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="index">Home</a></li>
+              <li><a href="about">About us</a></li>
+              <li><a href="services">Services</a></li>
+              <li><a href="projects">Projects</a></li>
+              <li><a href="blog">Blog</a></li>
+              <li><a href="contact">Contact</a></li>
             </ul>
           </div><!-- End footer links column-->
 
