--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </div>
 
           <div class="col-lg-5" data-aos="fade">
-            <form action="forms/quote.php" method="post" class="php-email-form" class="php-email-form" role="form" class="php-email-form" data-recaptcha-site-key="6Lcck9UlAAAAAJeeJZ_HOozYjZSt2UenUFq3S4KA">
+            <form action="forms/quote.php" method="post" class="php-email-form" class="php-email-form" role="form" class="php-email-form">
               <h3>Book a Free Consultation</h3>
               <p>Fill out the form below and a Project Manager will call you within two hours to hear your needs and give you advice on how to implement the technology to achieve your goal.</p>
               <div class="row gy-3">
@@ -146,7 +146,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your quote request has been sent successfully. Thank you!</div>
 
-                  <button  class="g-recaptcha"  data-sitekey="6Lcck9UlAAAAAJeeJZ_HOozYjZSt2UenUFq3S4KA" data-callback='onSubmit'   data-action='submit' type="submit">Let's Connect!</button>
+                  <button   type="submit">Let's Connect!</button>
                 </div>
 
               </div>
@@ -918,7 +918,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="https://www.google.com/recaptcha/api.js"></script>
+ 
 
 </body>
 
