--- a/about.html
+++ b/about.html
@@ -314,7 +314,7 @@
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
             <div class="member-img">
-              <img src="assets/img/team/TO.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/to.jpg" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter"></i></a>               
                 <a href="#"><i class="bi bi-instagram"></i></a>
