blog pic update

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
 
         <div class="row position-relative">
 
-          <div class="col-lg-7 about-img" style="background-image: url(assets/img/sila.jpg);"></div>
+          <div class="col-lg-7 about-img" style="background-image: url(assets/img/mloga.jpg);"></div>
 
           <div class="col-lg-7">
             <h2>Nunuget where posibilities are infinite</h2>
