--- a/blog-agile.html
+++ b/blog-agile.html
@@ -142,7 +142,7 @@
                   <p>
                   But the flexibilities provided by self-directed learning come at a cost. Those who choose to learn independently don’t have the accountability a set schedule or formal instructor offers; rather they are responsible for keeping themselves on track and productive. While this approach may work well for some, those who are less self-motivated may find themselves falling behind on their upskilling timetable.
                 </p>
-                <img src="assets/img/blog/jth.jpg" class="img-fluid" alt="">
+                <img src="assets/img/blog/221.jpg" class="img-fluid" alt="">
 
                 <h3>How Long Does It Take to Become a Software Engineer? </h3>
                 <p>
