--- a/blog-qms.html
+++ b/blog-qms.html
@@ -142,7 +142,7 @@
                 <p>
                   Their hard work paid off when they were appointed among the ten best innovation ideas in Tanzania in 2019 through the MAKISATU program conducted by COSTECH. The team was elated to see that their innovation was being recognized and appreciated by the larger community.
                 </p>
-                <img src="assets/img/blog/dj.jpg" class="img-fluid" alt="">
+                <img src="assets/img/blog/114.jpg" class="img-fluid" alt="">
                  <p>
                   But their success didn't stop there. The QMS also won the Best Business Idea and Technology Award among 53 innovations at Mbeya University of Science and Technology in the same year. This recognition gave Nunuget the confidence to continue working on their QMS and expand its reach.
                  </p>
