--- a/blog-women.html
+++ b/blog-women.html
@@ -141,7 +141,7 @@
                   <p>
                     Studies have shown that diverse teams perform better than homogenous ones, and this is particularly true in the tech industry. By including more women in tech, companies can improve their bottom line while also promoting gender equality.
                 </p>
-                <img src="assets/img/blog/sila.jpg" class="img-fluid" alt="">
+                <img src="assets/img/blog/113.jpg" class="img-fluid" alt="">
 
                 <h3>A. Diverse Perspectives </h3>
                 <p>
