--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2 data-aos="fade-down">Enterprise Custom Software Development</h2>
+            <h2 data-aos="fade-down">Enterprise JOVIAL Custom Software Development</h2>
             <p data-aos="fade-up">Take full advantage of tech solutions! Launch innovative digital products faster.
               Rethink your IT strategy by embracing disruptive user-centric design & software architectural patterns.
             </p>
